--- a/src/layouts/mainLayout.astro
+++ b/src/layouts/mainLayout.astro
@@ -38,7 +38,7 @@ interface Props {
 	canonical?: string
 	ogImage?: string
 	noindex?: boolean
-	extraStructuredData?: StructuredData
+	extraStructuredData?: StructuredData | any
 	alternateLanguages?: { code: string; name: string; url?: string }[]
 }
 
