--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from '@/layouts/MainLayout.astro'
+import MainLayout from '@/layouts/mainLayout.astro'
 import { DEFAULT_LANGUAGE } from '@/lib/i18n/config'
 import { LANGUAGES } from '@/lib/i18n/config'
 
