--- a/src/pages/[lang]/blog/[...slug].astro
+++ b/src/pages/[lang]/blog/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { type CollectionEntry, getCollection } from 'astro:content'
-import MainLayout from '@/layouts/MainLayout.astro'
+import MainLayout from '@/layouts/mainLayout.astro'
 import { formatDate } from '@/lib/i18n/utils'
 import { getAlternateLanguages } from '@/lib/i18n/middleware'
 import { LANGUAGES, DEFAULT_LANGUAGE } from '@/lib/i18n/config'
