--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from '@/layouts/MainLayout.astro'
+import MainLayout from '@/layouts/mainLayout.astro'
 import { Hero } from '@/components/Hero'
 import { Features } from '@/components/Features'
 import { HowItWorks } from '@/components/HowItWorks'
