--- a/src/pages/blog/category/[category].astro
+++ b/src/pages/blog/category/[category].astro
@@ -4,7 +4,7 @@
  * This page displays all blog posts in a specific category
  */
 import { getCollection, type CollectionEntry } from 'astro:content'
-import MainLayout from '@/layouts/MainLayout.astro'
+import MainLayout from '@/layouts/mainLayout.astro'
 import SEOManager from '@/components/seo/SEOManager.astro'
 import BlogCard from '@/components/blog/BlogCard.astro'
 import { blogConfig } from '@/lib/seo/config'
