--- a/src/pages/blog/productivity/[slug].astro
+++ b/src/pages/blog/productivity/[slug].astro
@@ -4,7 +4,7 @@
  * This page handles URLs like /blog/productivity/post-slug/
  */
 import { getCollection, type CollectionEntry } from 'astro:content'
-import MainLayout from '@/layouts/MainLayout.astro'
+import MainLayout from '@/layouts/mainLayout.astro'
 import SEOManager from '@/components/seo/SEOManager.astro'
 import BlogHero from '@/components/blog/BlogHero.astro'
 import TableOfContents from '@/components/blog/TableOfContents.astro'
