--- a/src/pages/convert/[source]-to-[target].astro
+++ b/src/pages/convert/[source]-to-[target].astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from '@/layouts/MainLayout.astro'
+import MainLayout from '@/layouts/mainLayout.astro'
 import { ConversionFlow } from '@/components/features/conversion'
 import { SupportedFormats } from '@/components/SupportedFormats'
 import { FAQ } from '@/components/FAQ'
