--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from '@/layouts/MainLayout.astro'
+import MainLayout from '@/layouts/mainLayout.astro'
 
 const title = 'Privacy Policy - TrustyConvert'
 const description =
