--- a/src/pages/all-conversions.astro
+++ b/src/pages/all-conversions.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from '@/layouts/MainLayout.astro'
+import MainLayout from '@/layouts/mainLayout.astro'
 import { ConversionSitemap } from '@/components/ConversionSitemap'
 import { DetailedConversionOptions } from '@/components/DetailedConversionOptions'
 import { BenefitsSection } from '@/components/BenefitsSection'
