--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from '@/layouts/MainLayout.astro'
+import MainLayout from '@/layouts/mainLayout.astro'
 import { DownloadManager } from '@/components/features/conversion'
 import { UploadIcon } from 'lucide-react'
 
