--- a/src/pages/error.astro
+++ b/src/pages/error.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from '@/layouts/MainLayout.astro'
+import MainLayout from '@/layouts/mainLayout.astro'
 
 /**
  * Error page for displaying error messages and status codes.
