--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from '@/layouts/MainLayout.astro'
+import MainLayout from '@/layouts/mainLayout.astro'
 
 const title = 'Frequently Asked Questions - TrustyConvert'
 const description =
