--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const {
 		<meta name="description" content={description} />
 		{canonical && <link rel="canonical" href={canonical} />}
 		{noindex && <meta name="robots" content="noindex" />}
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/ico" href="/favicon.ico" />
 	</head>
 	<body class="min-h-screen bg-background font-sans antialiased">
 		<slot />
